--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
     environment:
       name: 'Pages Preview'
       url: ${{ steps.preview_deployment.outputs.page_url }}
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     needs: test
     runs-on: ubuntu-latest
     steps:
